include_HEADERS =	bioapi.h \
			bioapi_api.h \
			bioapi_err.h \
			bioapi_type.h \
			bioapi_schema.h \
			bioapi_typecast.h \
			biospi.h \
			bsp_schema.h \
			bioapi_spi.h \
			bioapi_uuid.h \
			biospi_type.h
			
noinst_HEADERS = 	bioapi_util.h \
			installdefs.h \
			device_schema.h \
			mds.h \
			port/bioapi_lock.h \
			port/bioapi_port.h
