include_HEADERS = 	cssmtype.h

noinst_HEADERS =	cssmerr.h \
			cssmMemTrack.h \
			mds_schema.h \
			trc_util.h \
			intel/ff_passthrough.h \
			intel/fwkpriverr.h \
			intel/installerr.h \
			intel/mds_util_api.h \
			intel/mds_util_helper.h \
			intel/mds_util_type.h \
			port/cssmlock.h \
			port/cssmport.h
